--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,11 @@
 body {
     font-family: Quicksand, sans-serif;
     color: yellow;
-    background-color: rgb(15,15,15);
+    background-color: white;
     font-weight: light;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    width: 100%;
     background-color: rgb(15,15,15);
 }
 
@@ -64,7 +61,47 @@ nav {
     border-bottom: 1px solid yellow;
 }
 
-.example {
-    background-color: white;
-    height: 1000px
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url("http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/main-image.png") no-repeat center center;
+
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode:forwards;
+}
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+@keyframes hero-zoom {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
+
+#cover-text, cover-text h2 {
+    color: white;
+}
+
+#cover-text {
+    font-size: 100%;
+    font-family: Quicksand, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    width: 600px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    background-color: rgba(241, 109, 107, .7);
+    bottom: 30px;
+    right: 150px;
+    position: absolute;
 }
