--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ footer {
 
 .social-links i {
     font-size: 120%;
-    margin: 4%;
     padding: 3%;
+    margin-right: 20px;
     color: yellow;
 }
