add hero image preliminary

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ nav {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url("http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/main-image.png") no-repeat center center;
+    background: url("https://www.electronics-lab.com/wp-content/uploads/2020/12/giveaway.png") no-repeat center center;
 
     animation-name: hero-zoom;
     animation-duration: 5s;
