--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,20 @@ hr {
     margin: 75px;
 }
 
+table {
+    width: 90%;
+    margin: 0 auto;   
+}
+
+table, th, td {
+    border: 1px solid yellow;
+    border-collapse: collapse;
+}
+
+td, th {
+    padding: 15px;
+}
+
 footer {
     height: 100px;
     display: flex;
