--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ nav {
 #logo {
     float: left;
     font-size: 200%;
+    margin-left: 35px;
 }
 
 #menu {
@@ -128,7 +129,7 @@ td, th {
 }
 
 footer {
-    height: 100px;
+    height: 150px;
     display: flex;
     align-items: center;
     background-color: rgb(15,15,15)
@@ -136,7 +137,13 @@ footer {
 
 #footer-message {
     float: left;
+    margin: 35px;
     width: 40%;
+}
+
+#footer-message i {
+    color: yellow;
+    font-size: 120%;
 }
 
 #footer-links {
