--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,23 +46,22 @@ nav {
 }
 
 #menu li {
-    margin-right: 30px;
+    margin-right: 15px;
 }
 
 #menu a {
     text-decoration: none;
     color: inherit;
-    border: 2px solid transparent;
+    padding: 10px 20px 10px 20px; 
 }
 
 #menu a:hover {
     background-color: yellow;
-    border: 2px solid #F03620;
     color: black;
 }
 
 .active {
-    border-bottom: 1px solid yellow;
+    border-bottom: 2px solid yellow;
 }
 
 /*-------------------------------------------Section 1-Hero image*/
@@ -77,12 +76,12 @@ nav {
 
 #cover-text h2 {
     color: white;
+    text-transform: uppercase;
 }
 
 #cover-text {
     font-size: 100%;
     font-family: Quicksand, sans-serif;
-    text-transform: uppercase;
     letter-spacing: 1px;
     width: 80%;
     height: auto;
@@ -104,6 +103,22 @@ hr {
 
 /*-------------------------------------------Section 2-table*/
 
+.table-message {
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(240, 54, 32, .7);
+    width: 90%;
+    margin: 0 auto;
+}
+
+caption {
+    margin-bottom: 10px;
+}
+
+.table {
+    padding-top: 50px;
+}
+
 table {
     width: 80%;
     margin: 0 auto;   
@@ -116,6 +131,14 @@ table, th, td {
 
 td, th {
     padding: 15px;
+}
+
+th:nth-child(2) {
+    background-color: rgba(240, 54, 32, .7);
+}
+
+td:nth-child(2) {
+    background-color: rgba(240, 54, 32, .7);
 }
 
 /*-------------------------------------------footer*/
@@ -173,7 +196,13 @@ footer {
 
 /*-------------------------------------------header*/
 
-@media screen and (max-width: 850px) {
+@media screen and (min-width: 950px) {
+    .table-message {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 950px) {
     nav {
         display: block;
     }
@@ -195,11 +224,12 @@ footer {
         text-decoration: none;
         color: inherit;
         border: 2px solid transparent;
+        padding: 10px 50px 10px 50px; 
+        margin: 0;
     }
 
     #menu a:hover {
         background-color: yellow;
-        padding: 10px 40px 10px 40px; 
         border: 2px solid #F03620;
         color: black;
     }
@@ -219,3 +249,4 @@ footer {
         margin: 0px 5px 0px 5px;
         padding: 3%; 
     }
+}
