--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,7 @@ td:nth-child(2) {
 /*-------------------------------------------footer*/
 
 footer {
+    margin-top: 75px;
     height: 150px;
     display: flex;
     align-items: center;
