add console image to ps5 and xbox pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,19 @@ td:nth-child(2) {
     color: white;
 }
 
+/*-------------------------------------------ps5/xbox pages*/
+
+.console-image {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    margin: 35px;
+    border: 10px solid rgba(240, 54, 32, .7);
+    border-radius: 20px;
+}
+
+
+
 /*-------------------------------------------footer*/
 
 footer {
