--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,9 +152,18 @@ td:nth-child(2) {
     margin: 35px;
     border: 10px solid rgba(240, 54, 32, .7);
     border-radius: 20px;
+    float: left;
 }
 
-
+.past-image {
+    height: 200px;
+    max-width:200px;
+    object-fit: cover;
+    margin-right: 10px;
+    margin-top: 35px;
+    border: 10px solid rgba(240, 54, 32, .7);
+    border-radius: 20px;
+}
 
 /*-------------------------------------------footer*/
 
