--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,10 @@ td:nth-child(2) {
 
 /*-------------------------------------------ps5/xbox pages*/
 
+#ps-info {
+    display: block;
+}
+
 .console-image {
     height: 400px;
     width: 400px;
@@ -157,7 +161,7 @@ td:nth-child(2) {
 
 .past-image {
     height: 200px;
-    max-width:200px;
+    width:200px;
     object-fit: cover;
     margin-right: 10px;
     margin-top: 35px;
@@ -165,6 +169,22 @@ td:nth-child(2) {
     border-radius: 20px;
 }
 
+#ps-message {
+    height: 170px;
+    background-color: rgba(240, 54, 32, .7);
+    display: block;
+    margin-right: 20px;
+    margin-top: 20px;
+    border-top: 2px solid yellow;
+}
+
+#ps-message h2 {
+    width: 100%;
+}
+
+#ps-message p {
+    width: 100%;
+}
 /*-------------------------------------------footer*/
 
 footer {
