--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,26 @@ td:nth-child(2) {
 #ps-message p {
     width: 100%;
 }
+
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 56%; 
+}
+
+.video-container iframe{
+    display: block;
+    border: 2px solid yellow;
+    padding: 10px;
+    background-color: rgba(240, 54, 32, .7);
+    position: absolute;
+    width: 60%;
+    height: 60%;
+}
+
 /*-------------------------------------------footer*/
 
 footer {
@@ -279,6 +299,11 @@ footer {
         color: black;
     }
 
+    .video-container iframe{
+    width: 80%;
+    height: 80%;
+    }
+
 /*-------------------------------------------footer*/
 
     #footer-message {
@@ -290,7 +315,7 @@ footer {
         width: 100%;
     }
 
-     #footer-links i {
+    #footer-links i {
         margin: 0px 5px 0px 5px;
         padding: 3%; 
     }
