--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,16 @@ td:nth-child(2) {
     height: 60%;
 }
 
+.carousel{
+    background: rgba(240, 54, 32, .7);;
+    margin-top: 20px;
+}
+.carousel-item{
+    text-align: center;
+    min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+    max-height: 300px;
+}
+
 /*-------------------------------------------footer*/
 
 footer {
