--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,13 +206,17 @@ td:nth-child(2) {
 }
 
 .carousel{
-    background: rgba(240, 54, 32, .7);;
+    background: rgba(240, 54, 32, .7);
     margin-top: 20px;
+    border-right: 2px solid yellow;
 }
 .carousel-item{
-    text-align: center;
-    min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
-    max-height: 300px;
+    min-height: 280px;
+}
+
+.carousel-item img {
+    width: 700px;
+    padding: 20px;
 }
 
 /*-------------------------------------------footer*/
