--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
 header {
     background-color: rgb(15,15,15);
     border-bottom: 2px solid yellow;
+    height: 150px;
 }
 
 h2 {
@@ -27,11 +28,12 @@ h2 {
 nav {
     display: flex;
     justify-content: flex-end;
+    height: 150px;
 }
 
 #logo {
     float: left;
-    font-size: 400%;
+    font-size: 300%;
     margin-left: 15px;
 }
 
@@ -39,15 +41,16 @@ nav {
     font-size: 90%;
     list-style-type: none;
     display: flex;
+    height: 150px;
 }
 
 #logo, #menu {
     line-height: 150px;
 }
 
-#menu li {
-    margin-right: 15px;
-}
+.menu-link {
+        border-left: 2px solid rgba(240, 54, 32, .7);
+    }
 
 #menu a {
     text-decoration: none;
@@ -353,19 +356,23 @@ footer {
 
     #menu li {
         text-align: center;
+        width: 100%;
+    }
+
+    #menu .menu-link {
+        border-top: 2px solid rgba(240, 54, 32, .7);
+        border-left: 0;
     }
 
     #menu a {
         text-decoration: none;
         color: inherit;
-        border: 2px solid transparent;
         padding: 10px 50px 10px 50px; 
         margin: 0;
     }
 
     #menu a:hover {
         background-color: yellow;
-        border: 2px solid #F03620;
         color: black;
     }
 
