add form basics and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,12 @@ td:nth-child(2) {
     height: 60%;
 }
 
+/*-------------------------------------------sign up*/
+
+#signup-info {
+    background-color: #B22F21;
+}
+
 /*-------------------------------------------footer*/
 
 footer {
