add sign up form and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,30 @@ td:nth-child(2) {
     background-color: #B22F21;
 }
 
+.form-section {
+    width:60%;
+    margin: 0 auto;
+    border: 2px solid yellow;
+    padding: 10px;
+}
+
+label {
+    width: 100%;
+}
+
+input[type=text], input[type=email] {
+    width: 100%;
+}
+
+.join-button {
+    width: 90%;
+    background-color: #B22F21;
+    border-radius: 15px;
+    margin: 20px;
+    padding: 10px 0px 10px 0px;
+    color: white;
+}
+
 /*-------------------------------------------footer*/
 
 footer {
