add form styling and competition section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,7 +275,7 @@ td:nth-child(2) {
     height: 60%;
 }
 
-/*-------------------------------------------sign up*/
+/*-------------------------------------------sign up page*/
 
 #signup-info {
     background-color: #B22F21;
@@ -294,6 +294,26 @@ label {
 
 input[type=text], input[type=email] {
     width: 100%;
+}
+
+#hr-comp {
+    border-top: 2px solid yellow;
+    margin: 25px 5% 25px 5%;
+}
+
+#comp-section {
+    display: flex;
+}
+
+#comp-info {
+    border: 2px solid yellow;
+    color: white;
+    width: 50%;
+}
+
+#comp-input {
+    width: 50%;
+    padding: 10px;
 }
 
 .join-button {
