--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,7 @@ input[type=text], input[type=email] {
 #comp-info {
     color: white;
     width: 50%;
+    padding: 10px;
 }
 
 #comp-input {
@@ -434,6 +435,24 @@ footer {
     width: 80%;
     height: 80%;
     }
+
+/*-------------------------------------------sign up page*/
+
+.form-section {
+    width:90%;
+}
+
+#comp-section {
+    display: block;
+}
+
+#comp-info {
+    width: 100%;
+}
+
+#comp-input {
+    width: 100%;
+}
 
 /*-------------------------------------------footer*/
 
