--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,11 @@ input[type=text], input[type=email] {
     color: white;
 }
 
+.join-button:hover {
+    background-color: white;
+    color: #B22F21;
+}
+
 /*-------------------------------------------footer*/
 
 footer {
